added the client demo notebook

--- a/shopee titles.ipynb
+++ b/shopee titles.ipynb
@@ -818,6 +818,533 @@
     "#             diff_label.append(similarity)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "laughing-following",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T08:27:26.223907Z",
+     "start_time": "2021-05-04T08:27:26.018858Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "all_words = []\n",
+    "for title in df['title']:\n",
+    "    title_words = title.lower().split(' ')\n",
+    "    for each_word in title_words:\n",
+    "        all_words.append(each_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "portable-tradition",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:14:24.928210Z",
+     "start_time": "2021-05-04T08:27:32.466032Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "word_counts = []\n",
+    "for word in all_words:\n",
+    "    word_counts.append((word, all_words.count(word)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "thirty-slope",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:19:27.729781Z",
+     "start_time": "2021-05-04T09:19:27.483249Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "word_counts = list(set(word_counts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "champion-letter",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:19:29.255760Z",
+     "start_time": "2021-05-04T09:19:29.243582Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33899"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(word_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "adjacent-extraction",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:19:30.892942Z",
+     "start_time": "2021-05-04T09:19:30.864652Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "word_counts.sort(key = lambda x: x[1], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "boxed-alias",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:19:33.192111Z",
+     "start_time": "2021-05-04T09:19:33.168952Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "common_words = [word[0] for word in word_counts[:500]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "assisted-waters",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:19:34.943395Z",
+     "start_time": "2021-05-04T09:19:34.823162Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame(columns=common_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "dress-corruption",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T09:19:37.997989Z",
+     "start_time": "2021-05-04T09:19:36.592498Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df3 = pd.concat([df,df2], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "biblical-parks",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:09:16.111554Z",
+     "start_time": "2021-05-04T09:32:57.111120Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for word in common_words:\n",
+    "    for i, title in enumerate(df['title'][:5000]):\n",
+    "        if word in title:\n",
+    "            df3.loc[i, word] = 1\n",
+    "        else:\n",
+    "            df3.loc[i, word] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "optical-mathematics",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:11:43.354330Z",
+     "start_time": "2021-05-04T10:11:43.335385Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df4 = df3[:5000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "regular-arthur",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:11:47.822154Z",
+     "start_time": "2021-05-04T10:11:47.706034Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df5 = df4.drop(['posting_id', 'image', 'image_phash', 'title'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "grand-parameter",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:11:49.538947Z",
+     "start_time": "2021-05-04T10:11:49.494600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label_group</th>\n",
+       "      <th>/</th>\n",
+       "      <th>-</th>\n",
+       "      <th>anak</th>\n",
+       "      <th>wanita</th>\n",
+       "      <th></th>\n",
+       "      <th>original</th>\n",
+       "      <th>1</th>\n",
+       "      <th>murah</th>\n",
+       "      <th>tas</th>\n",
+       "      <th>...</th>\n",
+       "      <th>batam</th>\n",
+       "      <th>teh</th>\n",
+       "      <th>tv</th>\n",
+       "      <th>tutup</th>\n",
+       "      <th>you</th>\n",
+       "      <th>big</th>\n",
+       "      <th>halus</th>\n",
+       "      <th>kuning</th>\n",
+       "      <th>instant</th>\n",
+       "      <th>hias</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>249114794</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2937985045</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2395904891</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4093212188</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3648931069</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 501 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label_group  /  - anak wanita    original  1 murah tas  ... batam teh tv  \\\n",
+       "0    249114794  0  0    0      0  1        0  0     0   0  ...     0   0  0   \n",
+       "1   2937985045  1  0    0      0  1        0  1     0   0  ...     0   0  0   \n",
+       "2   2395904891  0  0    0      0  1        0  0     0   0  ...     0   0  0   \n",
+       "3   4093212188  1  1    0      0  1        0  1     0   0  ...     0   0  0   \n",
+       "4   3648931069  0  0    0      0  1        0  0     0   0  ...     0   0  0   \n",
+       "\n",
+       "  tutup you big halus kuning instant hias  \n",
+       "0     0   0   0     0      0       0    0  \n",
+       "1     0   0   0     0      0       0    0  \n",
+       "2     0   0   0     0      0       0    0  \n",
+       "3     0   0   0     0      0       0    0  \n",
+       "4     0   0   0     0      0       0    0  \n",
+       "\n",
+       "[5 rows x 501 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "familiar-stretch",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:11:55.972994Z",
+     "start_time": "2021-05-04T10:11:55.951171Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2979"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(y.value_counts()<2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "unable-federation",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:15:33.790536Z",
+     "start_time": "2021-05-04T10:15:33.560971Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df6 = df5.groupby('label_group').filter(lambda x: len(x) > 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "outdoor-difference",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:15:49.579897Z",
+     "start_time": "2021-05-04T10:15:49.549923Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X = df6.drop(['label_group'], axis=1)\n",
+    "y = df6['label_group']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "collective-passage",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T10:16:43.098910Z",
+     "start_time": "2021-05-04T10:16:43.068437Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "encouraging-chase",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T18:42:55.148071Z",
+     "start_time": "2021-05-04T18:42:50.015585Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "rf_clf = RandomForestClassifier(random_state=0, n_estimators=150, max_depth=50)\n",
+    "rf_clf.fit(X_train, y_train)\n",
+    "y_pred = rf_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "applied-implement",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-04T18:42:58.497065Z",
+     "start_time": "2021-05-04T18:42:57.131301Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Random Forest classifier on training set: 0.88\n",
+      "\n",
+      "Accuracy of Random Forest classifier on test set: 0.31\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy of Random Forest classifier on training set: {:.2f}'\n",
+    "     .format(rf_clf.score(X_train, y_train)))\n",
+    "print()\n",
+    "print(f'Accuracy of Random Forest classifier on test set: {accuracy_score(y_test, y_pred):.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "authentic-hartford",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -837,6 +1364,37 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
